--- a/lib/account-management/sign-up/sign-up.component.css
+++ b/lib/account-management/sign-up/sign-up.component.css
@@ -2,39 +2,39 @@
 	display: flex;
 	justify-content: space-around;
 
-	.content-logo {
+	& .content-logo {
 		align-items: center;
 		display: flex;
 
-		img {
+		& img {
 			width: 350px;
 		}
 	}
 
-	.sign-up {
+	& .sign-up {
 		display: flex;
 		justify-content: flex-end;
 
-		.title {
+		& .title {
 			color: #000;
 			font-size: 1.2rem;
 
-			h3 {
+			& h3 {
 				margin-left: 10px;
 			}
 		}
 
-		.form {
+		& .form {
 			display: flex;
 			flex-direction: column;
 			padding-top: 30px;
 			width: 100%;
 
-			> * {
+			& > * {
 				margin: 5px 0;
 			}
 
-			input {
+			& input {
 				border: 2px inset rgba(16, 16, 224, 0.37);
 				border-radius: 5px;
 				flex: 1;
@@ -44,26 +44,26 @@
 				padding: 10px 20px;
 			}
 
-			input:focus {
+			& input:focus {
 				border: 2px solid #3f51b5;
 			}
 
-			.gender-group {
+			& .gender-group {
 				display: flex;
 			}
 
-			.custom-md-success {
+			& .custom-md-success {
 				background: rgb(76, 175, 80);
 				color: rgb(255, 255, 255);
 			}
 
-			.sign-up-btn {
+			& .sign-up-btn {
 				font-weight: bold;
 				min-width: 200px;
 				font-size: 1.5em;
 			}
 
-			.validation-notification {
+			& .validation-notification {
 				margin-bottom: 10px;
 			}
 		}
