--- a/lib/app.component.css
+++ b/lib/app.component.css
@@ -1,12 +1,14 @@
 .app {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-.app .header {
-  flex: none;
-}
-.app .content {
-  background-color: #F0F1F2;
-  flex: 1;
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
+
+   & .header {
+      flex: none;
+   }
+
+   & .content {
+      background-color: #F0F1F2;
+      flex: 1;
+   }
 }
