--- a/lib/shared/components/info/info.component.css
+++ b/lib/shared/components/info/info.component.css
@@ -3,24 +3,26 @@
   justify-content: center;
   padding-top: 30px;
 
-  .content{
+  & .content{
     border: 1px inset #ddd;
     border-radius: 5px;
     box-shadow: 1px 0 5px 1px #3765a5;
     padding: 10px;
     width: 600px;
 
-    .title {
+    & .title {
       color: #3765a5;
       font-size: 1.2rem;
       font-weight: bold;
       padding: 20px 0;
+      text-align: center;
     }
 
-    .description {
+    & .description {
       color: #111;
       font-weight: bold;
       font-size: 0.95rem;
+      text-align: center;
     }
   }
 }
