--- a/lib/account-management/restore-access/change-password/change-password.component.html
+++ b/lib/account-management/restore-access/change-password/change-password.component.html
@@ -39,6 +39,6 @@
         </div>
         <sp-validation-notification *ngIf="!isEqual(passwordRepeat, password)"
                                     [message]="'Passwords are not equal'"></sp-validation-notification>
-        <button mdRaisedButton class="md-primary next-btn">Change password</button>
+        <button class="md-primary next-btn">Change password</button>
     </div>
 </form>
