--- a/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
+++ b/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
@@ -26,6 +26,6 @@
         <sp-validation-notification id="email-incorrect-error" *ngIf="!hasRequiredError(email)"
                                     [message]="'Email is incorrect'"></sp-validation-notification>
 
-        <a mdRaisedButton class="md-primary next-btn" (click)="getCode()">Next</a>
+        <a class="md-primary next-btn" (click)="getCode()">Next</a>
     </div>
 </form>
