--- a/lib/account-management/sign-up/sign-up.component.html
+++ b/lib/account-management/sign-up/sign-up.component.html
@@ -46,7 +46,7 @@
 				<!--<sp-validation-notification *ngIf="!isValid('gender')" [message]="'Gender is required'"></sp-validation-notification>-->
 			<!--</div>-->
 
-			<button mdRaisedButton class="custom-md-success sign-up-btn">Sign up</button>
+			<button class="custom-md-success sign-up-btn">Sign up</button>
 		</form>
 	</div>
 </div>
