--- a/lib/account-management/login/login.component.less
+++ b/lib/account-management/login/login.component.less
@@ -20,28 +20,6 @@
       margin-right: 10px;
     }
 
-    & .email {
-
-      & md-checkbox {
-        color: #fff;
-        margin: 0;
-
-        & .md-checkbox-label {
-          border: none;
-        }
-
-        & .md-checkbox-icon {
-          background-color: rgb(255, 255, 255);
-        }
-      }
-
-      & md-checkbox[aria-checked="true"] {
-        & .md-checkbox-icon {
-          background-color: rgb(76, 175, 80);
-        }
-      }
-    }
-
     & .sign-in-btn {
       align-self: center;
       line-height: 22px;
@@ -60,6 +38,7 @@
       line-height: 12px;
       display: flex;
       align-self: center;
+      margin-left: 10px;
     }
 
     & .validation-notification {
