--- a/lib/account-management/restore-access/restore-access-code/restore-access-code.component.html
+++ b/lib/account-management/restore-access/restore-access-code/restore-access-code.component.html
@@ -11,6 +11,6 @@
                    placeholder="XXXXXX"
                    ngControl="code"/>
         </div>
-        <a mdRaisedButton class="md-primary next-btn" (click)="applyCode()">Next</a>
+        <a class="md-primary next-btn" (click)="applyCode()">Next</a>
     </div>
 </form>
