--- a/lib/account-management/login/login.component.less
+++ b/lib/account-management/login/login.component.less
@@ -2,13 +2,7 @@
   & .form {
     display: flex;
     flex-direction: row;
-
-    & a, & label {
-      color: #fff;
-      padding: 5px 0;
-      text-decoration: none;
-      text-shadow: 0 0 1px #000;
-    }
+    align-items: center;
 
     & .header {
       font-size: 0.75em;
@@ -17,32 +11,11 @@
     & .input-group {
       display: flex;
       flex-direction: column;
-      margin-right: 10px;
-    }
+      margin-right: 1em;
 
-    & .sign-in-btn {
-      align-self: center;
-      line-height: 22px;
-      margin: 0;
-      min-width: 64px;
-    }
-
-    & .custom-md-success {
-      background: rgb(76, 175, 80);
-      color: rgb(255, 255, 255);
-    }
-
-    & .mock { //TODO delete after best ErrorAuthComponent implementation
-      min-height: 20px;
-      height: 22px;
-      line-height: 12px;
-      display: flex;
-      align-self: center;
-      margin-left: 10px;
-    }
-
-    & .validation-notification {
-      margin: 5px 0 10px 0%;
+      & .mdl-textfield{
+        width: 10em;
+      }
     }
   }
 }
