--- a/lib/shared/components/header/header.component.less
+++ b/lib/shared/components/header/header.component.less
@@ -1,21 +1,23 @@
 .header {
-  display: flex;
-  justify-content: space-around;
-  background-color: #3f51b5;
-  padding: 10px 0;
 
-  & a {
+  & .root-link{
+
     text-decoration: none;
-  }
+    height: 52px;
 
-  & .slogan {
-    color: #fff;
-    display: block;
-    font-weight: bold;
-    font-style: italic;
-    left: 55px;
-    position: relative;
-    text-shadow: 1px 1px 1px #000;
-    top: -25px;
+    & img{
+      height: 52px;
+    }
+
+    & .slogan {
+      display: block;
+      color: #ffffff;
+      font-weight: bold;
+      font-style: italic;
+      left: 36px;
+      position: relative;
+      top: -19px;
+      font-size: 0.75em;
+    }
   }
 }
