--- a/lib/shared/components/footer/footer.component.html
+++ b/lib/shared/components/footer/footer.component.html
@@ -1,3 +1,9 @@
-<footer class="footer">
-  <div class="brand">SmartPeople &copy; 2016</div>
+<footer class="mdl-mini-footer">
+  <div class="mdl-mini-footer__left-section">
+    <div class="mdl-logo">SmartPeople &copy; 2016</div>
+    <ul class="mdl-mini-footer__link-list">
+      <li><a href="#">Help</a></li>
+      <li><a href="#">Privacy & Terms</a></li>
+    </ul>
+  </div>
 </footer>
