--- a/lib/shared/components/main/main.component.html
+++ b/lib/shared/components/main/main.component.html
@@ -11,7 +11,7 @@
             <div class="mdl-layout-spacer"></div>
 
             <!-- Navigation. We hide it in small screens. -->
-            <ng-content select=".header-navigation"></ng-content>
+            <ng-content select=".header"></ng-content>
         </div>
     </header>
 
@@ -22,4 +22,7 @@
     <div class="mdl-layout__content">
         <ng-content select=".content"></ng-content>
     </div>
+
+    <sp-footer class="footer"></sp-footer>
+
 </div>
