--- a/lib/shared/components/main/main.component.html
+++ b/lib/shared/components/main/main.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="mdl-layout__content">
-        <ng-content select=".content"></ng-content>
+        <ng-content select=".content" class="content"></ng-content>
     </div>
 
     <sp-footer class="footer"></sp-footer>
