--- a/lib/shared/components/validation-notification/validation-notification.component.html
+++ b/lib/shared/components/validation-notification/validation-notification.component.html
@@ -1,3 +1,3 @@
-<div class="mdl-tooltip mdl-tooltip--large" for="current-email">
-    {{forId}} {{message}}
+<div class="validation-notification">
+    {{message}}
 </div>
