[SP-79] Fixed styles for sign-up form

--- a/lib/account-management/login/login.component.less
+++ b/lib/account-management/login/login.component.less
@@ -16,9 +16,8 @@
 
       padding-bottom: 32px;
 
-      & .login-button,
-      & .remember-me-group {
-        width: 300px;
+      & > * {
+        width: 90%;
       }
 
       & .login-button{
