--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -5,57 +5,59 @@
             <h2 class="mdl-card__title-text">Login</h2>
         </div>
 
-        <form class="form"  name="login" [ngFormModel]="form">
+        <div class="mdl-card__supporting-text">
+            <form class="form" name="login" [ngFormModel]="form">
 
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" name="email"
-                       id="current-email"
-                       ngControl="email"
-                       #email="ngForm"/>
-                <label class="mdl-textfield__label" for="current-email">Email</label>
-            </div>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" name="email"
+                           id="current-email"
+                           ngControl="email"
+                           #email="ngForm"/>
+                    <label class="mdl-textfield__label" for="current-email">Email</label>
+                </div>
 
-            <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"
-                                        [forId]="'current-email'">
+                <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"
+                                            [forId]="'current-email'">
 
-            </sp-validation-notification>
-            <sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'">
-            </sp-validation-notification>
+                </sp-validation-notification>
+                <sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'">
+                </sp-validation-notification>
 
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                <input class="mdl-textfield__input" type="text" name="password" id="current-password"
-                       ngControl="password"
-                       #password="ngForm"/>
-                <label class="mdl-textfield__label" for="current-password">Password</label>
-            </div>
+                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                    <input class="mdl-textfield__input" type="text" name="password" id="current-password"
+                           ngControl="password"
+                           #password="ngForm"/>
+                    <label class="mdl-textfield__label" for="current-password">Password</label>
+                </div>
 
-            <sp-validation-notification *ngIf="isRequired(password)"
-                                        [message]="'Password is required'"></sp-validation-notification>
-            <sp-validation-notification *ngIf="isInsufficientLength(password)"
-                                        [message]="'Password is too short'"></sp-validation-notification>
-            <sp-validation-notification *ngIf="isLengthExcess(password)"
-                                        [message]="'Password is too long'"></sp-validation-notification>
-            <sp-validation-notification *ngIf="!hasRangeError(password)"
-                                        [message]="'Password is incorrect'"></sp-validation-notification>
+                <sp-validation-notification *ngIf="isRequired(password)"
+                                            [message]="'Password is required'"></sp-validation-notification>
+                <sp-validation-notification *ngIf="isInsufficientLength(password)"
+                                            [message]="'Password is too short'"></sp-validation-notification>
+                <sp-validation-notification *ngIf="isLengthExcess(password)"
+                                            [message]="'Password is too long'"></sp-validation-notification>
+                <sp-validation-notification *ngIf="!hasRangeError(password)"
+                                            [message]="'Password is incorrect'"></sp-validation-notification>
 
-            <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
-                    (click)="login()">Sign in
-            </button>
+                <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
+                        (click)="login()">Sign in
+                </button>
 
-            <label class="remember-me-group mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="remember-me">
-                <input type="checkbox" id="remember-me" class="mdl-checkbox__input">
-                <span class="mdl-checkbox__label">Remember me</span>
-            </label>
+                <label class="remember-me-group mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="remember-me">
+                    <input type="checkbox" id="remember-me" class="mdl-checkbox__input">
+                    <span class="mdl-checkbox__label">Remember me</span>
+                </label>
 
-        </form>
+            </form>
 
+        </div>
         <div class="mdl-card__actions mdl-card--border">
-            <a  [routerLink]="['RestoreAccess']"
-                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            <a [routerLink]="['SignUp']"
+               class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 Create account
             </a>
-            <a  [routerLink]="['RestoreAccess']"
-                class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+            <a [routerLink]="['RestoreAccess']"
+               class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 Forgot password?
             </a>
         </div>
