--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -13,15 +13,10 @@
                            id="current-email"
                            ngControl="email"
                            #email="ngForm"/>
-                    <label class="mdl-textfield__label" for="current-email">Email</label>
+                    <label class="mdl-textfield__label" for="current-email">Email*</label>
+                    <sp-error-tooltip *ngIf="isRequired(email)" [message]="'Email is required'"></sp-error-tooltip>
+                    <sp-error-tooltip *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-error-tooltip>
                 </div>
-
-                <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"
-                                            [forId]="'current-email'">
-
-                </sp-validation-notification>
-                <sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'">
-                </sp-validation-notification>
 
                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <input class="mdl-textfield__input" type="text" name="password" id="current-password"
@@ -30,14 +25,10 @@
                     <label class="mdl-textfield__label" for="current-password">Password</label>
                 </div>
 
-                <sp-validation-notification *ngIf="isRequired(password)"
-                                            [message]="'Password is required'"></sp-validation-notification>
-                <sp-validation-notification *ngIf="isInsufficientLength(password)"
-                                            [message]="'Password is too short'"></sp-validation-notification>
-                <sp-validation-notification *ngIf="isLengthExcess(password)"
-                                            [message]="'Password is too long'"></sp-validation-notification>
-                <sp-validation-notification *ngIf="!hasRangeError(password)"
-                                            [message]="'Password is incorrect'"></sp-validation-notification>
+                <sp-error-tooltip *ngIf="isRequired(password)" [message]="'Password is required'"></sp-error-tooltip>
+                <sp-error-tooltip *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-error-tooltip>
+                <sp-error-tooltip *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-error-tooltip>
+                <sp-error-tooltip *ngIf="!hasRangeError(password)" [message]="'Password is incorrect'"></sp-error-tooltip>
 
                 <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
                         (click)="login()">Sign in
