--- a/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
+++ b/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
@@ -21,10 +21,10 @@
                    #email="ngForm"/>
 
         </div>
-        <sp-validation-notification id="email-required-error" *ngIf="isRequired(email)"
-                                    [message]="'Email is required'"></sp-validation-notification>
-        <sp-validation-notification id="email-incorrect-error" *ngIf="!hasRequiredError(email)"
-                                    [message]="'Email is incorrect'"></sp-validation-notification>
+        <sp-error-tooltip id="email-required-error" *ngIf="isRequired(email)"
+                                    [message]="'Email is required'"></sp-error-tooltip>
+        <sp-error-tooltip id="email-incorrect-error" *ngIf="!hasRequiredError(email)"
+                                    [message]="'Email is incorrect'"></sp-error-tooltip>
 
         <a class="md-primary next-btn" (click)="getCode()">Next</a>
     </div>
