--- a/lib/account-management/sign-up/sign-up.component.html
+++ b/lib/account-management/sign-up/sign-up.component.html
@@ -20,8 +20,8 @@
 					<label class="mdl-textfield__label" for="name">Name</label>
 				</div>
 
-				<sp-validation-notification *ngIf="isRequired(name)" [message]="'Name is required'"></sp-validation-notification>
-				<sp-validation-notification *ngIf="!hasRequiredError(name)" [message]="'Name is incorrect'"></sp-validation-notification>
+				<sp-error-tooltip *ngIf="isRequired(name)" [message]="'Name is required'"></sp-error-tooltip>
+				<sp-error-tooltip *ngIf="!hasRequiredError(name)" [message]="'Name is incorrect'"></sp-error-tooltip>
 
 				<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 					<input class="mdl-textfield__input" type="text" name="surname"
@@ -30,8 +30,8 @@
 						   #name="ngForm"/>
 					<label class="mdl-textfield__label" for="surname">Surname</label>
 				</div>
-				<sp-validation-notification *ngIf="isRequired(surname)" [message]="'Surname is required'"></sp-validation-notification>
-				<sp-validation-notification *ngIf="!hasRequiredError(surname)" [message]="'Surname is incorrect'"></sp-validation-notification>
+				<sp-error-tooltip *ngIf="isRequired(surname)" [message]="'Surname is required'"></sp-error-tooltip>
+				<sp-error-tooltip *ngIf="!hasRequiredError(surname)" [message]="'Surname is incorrect'"></sp-error-tooltip>
 			</div>
 
 			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
@@ -41,8 +41,8 @@
 					   #name="ngForm"/>
 				<label class="mdl-textfield__label" for="email">Email</label>
 			</div>
-			<sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"></sp-validation-notification>
-			<sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
+			<sp-error-tooltip *ngIf="isRequired(email)" [message]="'Email is required'"></sp-error-tooltip>
+			<sp-error-tooltip *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-error-tooltip>
 
 			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 				<input class="mdl-textfield__input" type="password" name="password"
@@ -51,10 +51,10 @@
 					   #password="ngForm"/>
 				<label class="mdl-textfield__label" for="password">Password</label>
 			</div>
-			<sp-validation-notification *ngIf="isRequired(password)" [message]="'Password is required'"></sp-validation-notification>
-			<sp-validation-notification *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-validation-notification>
-			<sp-validation-notification *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-validation-notification>
-			<sp-validation-notification *ngIf="!hasRangeError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
+			<sp-error-tooltip *ngIf="isRequired(password)" [message]="'Password is required'"></sp-error-tooltip>
+			<sp-error-tooltip *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-error-tooltip>
+			<sp-error-tooltip *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-error-tooltip>
+			<sp-error-tooltip *ngIf="!hasRangeError(password)" [message]="'Password is incorrect'"></sp-error-tooltip>
 
 			<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 				<input class="mdl-textfield__input" type="password" name="passwordRepeat"
@@ -64,7 +64,7 @@
 				<label class="mdl-textfield__label" for="passwordRepeat">Repeat password</label>
 			</div>
 
-			<sp-validation-notification *ngIf="!isEqual(passwordRepeat, password)" [message]="'Passwords are not equal'"></sp-validation-notification>
+			<sp-error-tooltip *ngIf="!isEqual(passwordRepeat, password)" [message]="'Passwords are not equal'"></sp-error-tooltip>
 <!--TODO Make validation notification for gender group-->
 			<div class="gender-group">
 				<div class="gender">
@@ -75,7 +75,7 @@
 					<input type="radio" name="gender" value="female" id="female" ngControl="gender"/>
 					<label for="female">Female</label>
 				</div>
-				<sp-validation-notification *ngIf="!isValid('gender')" [message]="'Gender is required'"></sp-validation-notification>
+				<sp-error-tooltip *ngIf="!isValid('gender')" [message]="'Gender is required'"></sp-error-tooltip>
 			</div>
 
 			<button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
