--- a/lib/errors/error-authorization/error-authorization.component.html
+++ b/lib/errors/error-authorization/error-authorization.component.html
@@ -16,8 +16,8 @@
                    #email="ngForm"/>
 
          </div>
-         <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
+         <sp-error-tooltip *ngIf="isRequired(email)" [message]="'Email is required'"></sp-error-tooltip>
+         <sp-error-tooltip *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-error-tooltip>
          <button class="md-primary next-btn">Repeat</button>
          <button class="custom-md-success sign-up-btn next-btn" [routerLink]="['Home']">Sign up</button>
       </div>
