--- a/lib/shared/components/error-tooltip/error-tooltip.component.less
+++ b/lib/shared/components/error-tooltip/error-tooltip.component.less
@@ -1,4 +1,4 @@
-.validation-notification {
+.error-tooltip {
   left: 80px;
   margin-left: -68px;
   bottom: -36px;
@@ -11,7 +11,7 @@
   transition: all 200ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
   will-change: transform;
   z-index: 999;
-  background: rgba(97, 97, 97, 0.9);
+  background: rgba(213, 0, 0, 0.7);
   border-radius: 2px;
   color: #fff;
   display: inline-block;
